--- a/project_app/templates/analyzer_app/student_dashboard.html
+++ b/project_app/templates/analyzer_app/student_dashboard.html
@@ -51,6 +51,8 @@
             </div>
         </div>
     </div>
+    <!-- Add this to your login template, below the main login form -->
+    
     <script src="{% static 'js/student_dashboard.js' %}"></script>
 </body>
 </html>
